# HSE-HOMEWORK-2025

./: README.md  pyproject.toml  requirements.txt
src/: config.py  main.py
src/utils/: data_collector.py  data_processing.py  report_generator.py  statistical_analysis.py  visualization.py  youtube_api.py
